startet 26.1.2 port